resources/assets/sass/_variables-dark.scss
// Colors
$white: #fff;
$gray-100: #f1f5f9;
$gray-200: #e2e8f0;
$gray-300: #cbd5e1;
$gray-400: #94a3b8;
$gray-500: #64748b;
$gray-600: #475569;
$gray-700: #334155;
$gray-800: #1e293b;
$gray-900: #0f172a;
$gray: $gray-500;
$black: #000;

$blue: #44679F;
$red: #ee5f5b;
$orange: #fd7e14;
$yellow: #f89406;
$green: #62c462;
$teal: #20c997;
$cyan: #5bc0de;

$primary: $blue;
$secondary: $gray-500;
$success: $green;
$info: $cyan;
$warning: $yellow;
$danger: $red;
$light: $gray-800;
$dark: $gray-200;

$colors: (
  "blue": $blue,
  "indigo": $indigo,
  "purple": $purple,
  "pink": $pink,
  "red": $red,
  "orange": $orange,
  "yellow": $yellow,
  "green": $green,
  "teal": $teal,
  "cyan": $cyan,
  "white": $white,
  "gray": $gray-600,
  "gray-dark": $gray-800
);

$theme-colors: (
  "primary": $primary,
  "secondary": $secondary,
  "success": $success,
  "info": $info,
  "warning": $warning,
  "danger": $danger,
  "light": $light,
  "dark": $dark
);


// Dark Theme
$darkmode-bg: $gray-900;
$darkmode-bg-dark: darken($gray-900, 3%);
$darkmode-bg-darker: darken($gray-900, 6%);

$color-contrast-dark: $white;
$color-contrast-light: $black;


// Body
$body-bg: $darkmode-bg-darker;
$body-color: $gray-300;
$body-color-pale: $gray-400;
$body-color-muted: $gray-600;


// Components
$border-color: $darkmode-bg;

$link-thumbnail-placeholder-color: $gray-800;


// Links & Typo
$link-color: $gray-200;
$link-hover-color: $white;

$headings-color: $white;


// Tables
$table-color: $white;
$table-accent-bg: rgba($white, .05);
$table-hover-bg: $gray-900;

$table-border-color: $darkmode-bg-dark;

$table-dark-border-color: $table-border-color;
$table-dark-color: $white;


// Forms
$input-bg: $gray-800;
$input-disabled-bg: $darkmode-bg;
$input-border-color: $darkmode-bg-dark;
$input-color: $body-color;


// Dropdowns
$dropdown-bg: $darkmode-bg;
$dropdown-border-color: $darkmode-bg-dark;
$dropdown-divider-bg: $darkmode-bg-dark;

$dropdown-link-color: $body-color;
$dropdown-link-hover-color: $white;
$dropdown-link-hover-bg: $darkmode-bg-darker;


// Navs
$nav-tabs-border-color: $gray-900;
$nav-tabs-link-hover-border-color: $nav-tabs-border-color;
$nav-tabs-link-active-color: $white;
$nav-tabs-link-active-border-color: $nav-tabs-border-color;

$navbar-dark-hover-color: $white;

$navbar-light-hover-color: $gray-800;
$navbar-light-active-color: $gray-800;


// Pagination
$pagination-color: $white;
$pagination-bg: $darkmode-bg-dark;
$pagination-border-color: $darkmode-bg-dark;

$pagination-hover-color: $white;
$pagination-hover-bg: $gray-800;
$pagination-hover-border-color: $darkmode-bg;

$pagination-active-bg: $gray-800;
$pagination-active-border-color: $darkmode-bg;

$pagination-disabled-color: $body-color-muted;
$pagination-disabled-bg: transparent;
$pagination-disabled-border-color: $pagination-border-color;


// Cards
$card-border-color: $darkmode-bg-dark;
$card-cap-bg: $darkmode-bg;
$card-bg: $darkmode-bg;


// List group
$list-group-bg: $darkmode-bg;
$list-group-color: $body-color;
$list-group-border-color: $darkmode-bg-darker;

$list-group-hover-bg: $darkmode-bg-dark;
$list-group-active-color: $white;
$list-group-active-bg: $list-group-hover-bg;
$list-group-active-border-color: $list-group-border-color;

$list-group-disabled-color: $gray-700;

$list-group-action-color: $white;
$list-group-action-active-color: $white;
$list-group-action-active-bg: $darkmode-bg-dark;

// Alerts
$alert-bg-level: +8;
$alert-border-level: +7;
$alert-color-level: -8;

// Code
$code-background-color: $darkmode-bg;

